[project]
name = "temporal-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"

# Dependencies
dependencies = [
    "core",
    "csv_processor",
    "json_processor",
    "sql_extract",
    "http_extract",
]

[tool.uv.workspace]
members = [
    "core",
    "plugins/sql_extract",
    "plugins/csv_processor",
    "plugins/json_processor",
    "plugins/http_extract",
]

[tool.uv.sources]
core = { workspace = true }
sql_extract = { workspace = true }
csv_processor = { workspace = true }
json_processor = { workspace = true }
http_extract = { workspace = true }

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pydocstyle>=6.3.0",
    "pyright>=1.1.402",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-randomly>=3.16.0",
    "ruff>=0.12.2",
]

# Lintter settings
[tool.ruff]
line-length = 79
target-version = "py313"
fix = true
unsafe-fixes = true

[tool.ruff.lint]
ignore = ["D203", "D212", "S101", "RUF002", "ANN401", "RUF001"]
select = [
    "A", "B", "F", "I", "Q", "ASYNC", "N", "W", "UP",
    "T20", "SIM", "ANN", "PL", "PT", "RET", "E", "S",
    "C4", "EM", "DTZ", "RUF", "TCH", "ARG"
]

[tool.ruff.lint.isort]
known-first-party = ["core", "plugins", "tests"]

[tool.ruff.lint.per-file-ignores]
"core/src/core/cli/__init__.py" = [
    "PLR0913",
    "PLR0912",
    "PLR0915",
    "PLC0415",
    "S603",
]

[tool.pydocstyle]
convention = "google"

[tool.pyright]
include = ["core", "plugins"]
pythonVersion = "3.13"

