[project]
name = "temporal-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

# Dependencies
dependencies = [
    "core",
    "cli",
    "json_processor",
    "sql_extract",
    "http_extract",
]

[tool.uv.workspace]
members = [
    "core",
    "cli",
    "plugins/sql_extract",
    "plugins/json_processor",
    "plugins/http_extract",
]

[tool.uv.sources]
core = { workspace = true }
cli = { workspace = true }
sql_extract = { workspace = true }
json_processor = { workspace = true }
http_extract = { workspace = true }

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pydocstyle>=6.3.0",
    "pyright>=1.1.402",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.2.1",
    "pytest-randomly>=3.16.0",
    "ruff>=0.12.2",
    "testcontainers[temporal]>=4.10.0",
]

# Lintter settings
[tool.ruff]
line-length = 79
target-version = "py313"
fix = true
unsafe-fixes = true

[tool.ruff.lint]
ignore = ["D203", "D212", "S101", "RUF002", "ANN401", "RUF001"]
select = [
    "A", "B", "F", "I", "Q", "ASYNC", "N", "W", "UP",
    "T20", "SIM", "ANN", "PL", "PT", "RET", "E", "S",
    "C4", "EM", "DTZ", "RUF", "TCH", "ARG"
]

[tool.ruff.lint.isort]
known-first-party = ["core", "plugins", "tests"]

[tool.ruff.lint.per-file-ignores]
"core/src/core/cli/__init__.py" = [
    "PLR0913",
    "PLR0912",
    "PLR0915",
    "PLC0415",
    "S603",
]

[tool.pydocstyle]
convention = "google"

[tool.pyright]
include = ["core", "plugins"]
pythonVersion = "3.12"

