[project]
name = "core"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ryibalchenko.NV", email = "Ryibalchenko.NV@dns-shop.ru" }
]
requires-python = ">=3.13"
dependencies = [
    "polars>=1.31.0",
    "pydantic>=2.11.7",
    "pyyaml>=6.0.2",
    "temporalio>=1.13.0",
    "typer>=0.16.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# CLI Interface
[project.scripts]
temporal-pipeline = "core.cli:app"
tpd = "core.cli:app"
pipeline = "core.cli:app"

# Tests settings
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
pythonpath = "."

log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(name)s: %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

