[project]
name = "core"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Neko1313", email = "89246763535@mail.ru" }
]
requires-python = ">=3.12"
dependencies = [
    "polars>=1.31.0",
    "pandas>=2.3.1",
    "pydantic>=2.11.7",
    "pyyaml>=6.0.2",
    "temporalio>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
