[project]
name = "csv-processor"
version = "1.0.0"
description = "CSV извлечение и обработка для Temporal Pipeline"
readme = "README.md"
authors = [
    { name = "Data Engineering Team", email = "data-team@company.com" }
]
requires-python = ">=3.13"
dependencies = [
    "core",
    "polars>=1.31.0",
    "pydantic>=2.11.7",
    "aiohttp>=3.8.0",
    "aiofiles>=23.0.0",
    "boto3>=1.26.0",
    "aioftp>=0.21.0",
]

[project.entry-points.extract]
csv_extract = "csv_processor:CSVExtract"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
core = { workspace = true }