[project]
name = "json-processor"
version = "1.0.0"
description = "JSON трансформация и обработка для Temporal Pipeline"
readme = "README.md"
authors = [
    { name = "Data Engineering Team", email = "data-team@company.com" }
]
requires-python = ">=3.13"
dependencies = [
    "core",
    "polars>=1.31.0",
    "pydantic>=2.11.7",
]

[project.entry-points.transform]
json_transform = "json_processor:JSONTransform"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
core = { workspace = true }
