[project]
name = "postgres-load"
version = "1.0.0"
description = "PostgreSQL загрузка данных для Temporal Pipeline"
readme = "README.md"
authors = [
    { name = "Data Engineering Team", email = "data-team@company.com" }
]
requires-python = ">=3.13"
dependencies = [
    "core",
    "polars>=1.31.0",
    "pydantic>=2.11.7",
    "asyncpg>=0.28.0",
]

[project.entry-points.load]
postgres_load = "postgres_load:PostgreSQLLoad"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
core = { workspace = true }
