[project]
name = "sql-extract"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ryibalchenko.NV", email = "Ryibalchenko.NV@dns-shop.ru" }
]
requires-python = ">=3.13"
dependencies = []

[project.entry-points.extract]
sql_extract = "sql_extract:SQLExtract"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
