[project]
name = "sql-extract"
version = "1.0.0"
description = "SQL извлечение данных для Temporal Pipeline"
readme = "README.md"
authors = [
    { name = "Neko1313", email = "89246763535@mail.ru" }
]
requires-python = ">=3.12"
dependencies = [
    "core",
    "polars>=1.31.0",
    "pydantic>=2.11.7",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.28.0",
    "aiomysql>=0.2.0",
    "aiosqlite>=0.19.0",
    "aioodbc>=0.5.0",
]

[project.entry-points.extract]
sql_extract = "sql_extract:SQLExtract"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
core = { workspace = true }
